Bug 739674 - test_tmpl_storage_bad_parameters_2.xul (and others) don't close their database. r=enndeakin.